# Bootcamps

Python_Ai_BackEnd_Developer/: Sistema_Bancario_V01.py  (+2 more)
Python_Ai_BackEnd_Developer/TDD_Projeto/: .env  Makefile  pyproject.toml
Python_Ai_BackEnd_Developer/TDD_Projeto/store/: main.py  routers.py
Python_Ai_BackEnd_Developer/TDD_Projeto/store/controllers/: product.py
Python_Ai_BackEnd_Developer/TDD_Projeto/store/core/: config.py  exceptions.py
Python_Ai_BackEnd_Developer/TDD_Projeto/store/db/: mongo.py
Python_Ai_BackEnd_Developer/TDD_Projeto/store/models/: base.py
Python_Ai_BackEnd_Developer/TDD_Projeto/store/schemas/: base.py  product.py
Python_Ai_BackEnd_Developer/TDD_Projeto/store/usecases/: product.py
Python_Ai_BackEnd_Developer/TDD_Projeto/tests/: conftest.py  factories.py
Python_Ai_BackEnd_Developer/TDD_Projeto/tests/controllers/: test_product.py
Python_Ai_BackEnd_Developer/TDD_Projeto/tests/schemas/: test_product.py
Python_Ai_BackEnd_Developer/TDD_Projeto/tests/usecases/: test_product.py
Python_Ai_BackEnd_Developer/WORKOUT_API_Projeto/: Makefile  alembic.ini  docker-compose.yml  pyproject.toml
Python_Ai_BackEnd_Developer/WORKOUT_API_Projeto/alembic/: env.py
Python_Ai_BackEnd_Developer/WORKOUT_API_Projeto/alembic/versions/: decaa641609b_.py
Python_Ai_BackEnd_Developer/WORKOUT_API_Projeto/workout_api/: main.py  routers.py
Python_Ai_BackEnd_Developer/WORKOUT_API_Projeto/workout_api/atleta/: controller.py  models.py  schemas.py
Python_Ai_BackEnd_Developer/WORKOUT_API_Projeto/workout_api/categorias/: controller.py  schemas.py
(+5 files in other folders)
