[tool.poetry]
name = "tdd projeto"
version = "0.0.1"
description = ""
authors = ["everton <evertonjunior1015@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
motor = "^3.4.0"
pytest = "^8.2.2"
pytest_async = "^0.1.1"
pre-commit = "^3.7.1"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
