[tool.poetry]
name = "workout api"
version = "0.1.0"
description = ""
authors = ["everton <evertonjunior1015@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.30"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
